[package]
name = "uring-sys"
version = "0.8.0"
description = "liburing bindings"
repository = "https://github.com/topecongiro/uring-sys"
keywords = ["io_uring", "liburing"]
license = "MIT OR Apache-2.0"
authors = ["Without Boats <boats@mozilla.com>", "Seiichi Uchida <topecongiro@fastmail.com>"]
edition = "2018"
links = "uring"

[dependencies]
libc = "0.2.65"

[build-dependencies]
cc = "1.0.47"
