[package]
name = "uring-sys2"
version = "0.9.1"
description = "liburing bindings"
repository = "https://github.com/topecongiro/uring-sys"
keywords = ["io_uring", "liburing"]
license = "MIT OR Apache-2.0"
authors = ["Without Boats <boats@mozilla.com>", "Seiichi Uchida <topecongiro@fastmail.com>"]
edition = "2018"
links = "uring"

[dependencies]
libc = "0.2.151"

[build-dependencies]
bindgen = { version = "0.69.1", features = ["experimental"] }
cc = "1.0.83"

[dev-dependencies]
tempfile = "3.9.0"
